<resources>
    <string name="app_name">SmallLemonadeSXW</string>
    <string name="mf_name">昵称</string>
    <string name="mf_eye">关注</string>
    <string name="mf_base">基本资料</string>
    <string name="mf_mine">我的帖子</string>
    <string name="mf_feed">意见反馈</string>
    <string name="mf_seting">设置</string>
    <string name="mf_up">修改密码改这里哦</string>
    <string name="mf_pwd">修改密码</string>
    <string name="mf_ok">完成</string>
    <string name="mf_friend">邀请好友</string>
    <string name="mf_about_mine">关于我们</string>
    <string name="mf_version_update">版本更新</string>
    <string name="mf_log_off">退出登陆</string>
    <string name="period_two_people">恋爱期</string>
    <string name="period_one_dog">单身期</string>
    <string name="period_one_dog_pop">您现处在于</string>
    <string name="period_one_dog_pop_button_true">确定</string>
    <string name="period_one_dog_pop_button_message">消息</string>
    <string name="period_one_dog_pop_button_talk">会话</string>
    <string name="period_one_dog_pop_button_replay">回复</string>
    <string name="period_one_dog_pop_button_concern">未关注人消息</string>
    <string name="period_one_dog_pop_button_xitong_message">系统消息</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开加载更多</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_footer_refreshing_labels">倒序查看</string>
    <string name="pull_to_refresh_footer_refreshing_labelss">取消</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_demo">ViewDemoActivity</string>
    <string name="title_activity_dialog_demo">DialogDemoActivity</string>
</resources>
