<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="40px"
        android:background="#F1F1F1"></com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/mf_modify_pwd"
        android:background="@color/colorWhite"
        android:padding="@dimen/mf_hor_margain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mf_tv_hei"
            android:layout_marginLeft="@dimen/mf_hor_margain"
            android:layout_toRightOf="@id/img_me"
            android:text="@string/mf_pwd"

            android:layout_marginTop="@dimen/home_fragment_period_pop_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_fragment_note"
        android:background="#F1F1F1"></com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/mf_invite_friend"
        android:background="@color/colorWhite"
        android:padding="@dimen/mf_hor_margain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mf_tv_hei"
            android:layout_marginLeft="@dimen/mf_hor_margain"
            android:layout_toRightOf="@id/img_me"
            android:layout_marginTop="@dimen/home_fragment_period_pop_left"
            android:text="@string/mf_friend"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/mf_about_mine"
        android:background="@color/colorWhite"
        android:padding="@dimen/mf_hor_margain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mf_tv_hei"
            android:layout_marginLeft="@dimen/mf_hor_margain"
            android:layout_marginTop="@dimen/home_fragment_period_pop_left"
            android:layout_toRightOf="@id/img_me"
            android:text="@string/mf_about_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/mf_version_update"
        android:background="@color/colorWhite"
        android:padding="@dimen/mf_hor_margain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mf_tv_hei"
            android:layout_marginLeft="@dimen/mf_hor_margain"
            android:layout_toRightOf="@id/img_me"
            android:text="@string/mf_version_update"
            android:layout_marginTop="@dimen/home_fragment_period_pop_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <Button
        android:text="@string/mf_log_off"
        android:layout_width="@dimen/mf_log_off"
        android:layout_marginLeft="@dimen/home_fragment_period_pop_left"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mf_tv_hei"/>
</com.zhy.autolayout.AutoLinearLayout>
