<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home__fragemnt__note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_fragment_period_pop_local">

        <ImageView
            android:id="@+id/home_fragment__note_back"
            android:layout_width="@dimen/home_fragment_note"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/home_fragment_note"
            android:src="@mipmap/a5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/period_one_dog_pop_button_message"
            android:textSize="@dimen/home_fragment_note" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/Gray"></com.zhy.autolayout.AutoLinearLayout>

    <RadioGroup
        android:id="@+id/activity_home__fragemnt__rg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_fragment_period"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_fragment_note_biankuang"
            android:layout_weight="2"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/period_one_dog_pop_button_talk"
            android:textColor="@color/popCoffeeColor" />

        <RadioButton
            android:background="@drawable/home_fragment_note_biankuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/period_one_dog_pop_button_replay" />
    </RadioGroup>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/home_fragment_background">

        <CheckBox
            android:id="@+id/home_fragment__note_che"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="10px"
            android:layout_weight="1"
            android:background="@drawable/home_fragment_background"
            android:button="@null" />

        <CheckBox
            android:id="@+id/home_fragment__note_che2"
            android:layout_width="wrap_content"
            android:layout_height="10px"
            android:layout_weight="1"
            android:background="@drawable/home_fragment_background"
            android:button="@null" />
    </com.zhy.autolayout.AutoLinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/home_fragment_vp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v4.view.ViewPager>

</com.zhy.autolayout.AutoLinearLayout>
